test/assets/invalid/modules/Main.hs
module Main where
import A

main = putStrLn a